force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_BusLine__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_BusLine__c</fullName>
    <label>* Business Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COAL</fullName>
            </value>
            <value>
                <fullName>CREDIT PARENT LINE</fullName>
            </value>
            <value>
                <fullName>Crude (Derivatives)</fullName>
            </value>
            <value>
                <fullName>Crude (Physical)</fullName>
            </value>
            <value>
                <fullName>Crude Freight</fullName>
            </value>
            <value>
                <fullName>EMISSIONS</fullName>
            </value>
            <value>
                <fullName>FINANCIAL LNG</fullName>
            </value>
            <value>
                <fullName>GAS &amp; POWER</fullName>
            </value>
            <value>
                <fullName>GAS &amp; POWER DERIVATIVES</fullName>
            </value>
            <value>
                <fullName>GENERAL &amp; ADMINISTRATIVE VENDOR</fullName>
            </value>
            <value>
                <fullName>LNG Freight</fullName>
            </value>
            <value>
                <fullName>LNG SHIPPING</fullName>
            </value>
            <value>
                <fullName>OIL DERIVATIVES - Do Not Use</fullName>
            </value>
            <value>
                <fullName>OIL SHIPPING</fullName>
            </value>
            <value>
                <fullName>PHYSICAL LNG</fullName>
            </value>
            <value>
                <fullName>PHYSICAL OIL - Do Not Use</fullName>
            </value>
            <value>
                <fullName>Products (Derivatives)</fullName>
            </value>
            <value>
                <fullName>Products (Physical)</fullName>
            </value>
            <value>
                <fullName>Products Freight</fullName>
            </value>
            <value>
                <fullName>NA Credit System</fullName>
            </value>
            <value>
                <fullName>NA Emissions Carbon</fullName>
            </value>
            <value>
                <fullName>NA Emissions Non-Carbon</fullName>
            </value>
            <value>
                <fullName>NA G&amp;A</fullName>
            </value>
            <value>
                <fullName>NA Gas</fullName>
            </value>
            <value>
                <fullName>NA Power</fullName>
            </value>
            <value>
                <fullName>NA Risk Gas</fullName>
            </value>
            <value>
                <fullName>NA Risk Others</fullName>
            </value>
            <value>
                <fullName>NA Risk Power</fullName>
            </value>
            <value>
                <fullName>NA Scheduling Only</fullName>
            </value>
            <value>
                <fullName>North America LNG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>