force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_EndDate__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>