force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_EPayment__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_EPayment__c</fullName>
    <label>* Electronic Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No-Check</fullName>
            </value>
            <value>
                <fullName>Yes-ACH</fullName>
            </value>
            <value>
                <fullName>Yes-Wire</fullName>
            </value>
            <value>
                <fullName>Yes–Wire</fullName>
            </value>
            <value>
                <fullName>Yes-Direct debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>