force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_FFC_AccName__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_FFC_AccName__c</fullName>
    <label>FFC - Account Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>