force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_FFC_AccNum__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_FFC_AccNum__c</fullName>
    <label>FFC - Account Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>