force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_Int_BankCode__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_Int_BankCode__c</fullName>
    <label>Intermediary Bank Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>