force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_Int_IBAN__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_Int_IBAN__c</fullName>
    <label>Intermediary IBAN</label>
    <length>36</length>
    <type>Text</type>
</CustomField>