force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_Int_SWIFTCode__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_Int_SWIFTCode__c</fullName>
    <label>Intermediary SWIFT Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>