force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_Optional_Currency__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_Optional_Currency__c</fullName>
    <inlineHelpText>Other Currency used apart from the Primary Currency</inlineHelpText>
    <label>Optional Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BET_Currency</valueSetName>
    </valueSet>
</CustomField>