force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_RefDet__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_RefDet__c</fullName>
    <label>Bank Reference Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCD - One payment to many invoices</fullName>
            </value>
            <value>
                <fullName>CTX - Creates a business document that is called an 820</fullName>
            </value>
            <value>
                <fullName>CTX - Creates a business document that is called 820</fullName>
                <isActive>false</isActive>
                <label>CTX - Creates a business document that is called 820</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>