force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_Contact_With_CP__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_Contact_With_CP__c</fullName>
    <inlineHelpText>This field is auto-populated from Goldtier Section &apos;How was contact made with this CP?&apos;</inlineHelpText>
    <label>* How was contact made with this CP?</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>