force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_Core_Business__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_Core_Business__c</fullName>
    <label>* Core Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>