force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_DueDiligType__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_DueDiligType__c</fullName>
    <defaultValue>&quot;BDD - Basic Due Diligence&quot;</defaultValue>
    <label>* Type of Due Diligence</label>
    <length>200</length>
    <type>Text</type>
</CustomField>