force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_GoldTier_ID__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_GoldTier_ID__c</fullName>
    <label>GoldTier ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>