force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_IndTax_SignOff__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_IndTax_SignOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect Tax Sign Off</label>
    <type>Checkbox</type>
</CustomField>