force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_OwnType__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_OwnType__c</fullName>
    <label>* Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>