force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_PVAT_TaxNum__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_PVAT_TaxNum__c</fullName>
    <label>Primary VAT/Tax Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>