force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_Rationale__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_Rationale__c</fullName>
    <inlineHelpText>This field is auto-populated from Goldtier Section &apos;Rationale for Onboarding this CP?&apos;</inlineHelpText>
    <label>* Rationale for Onboarding this CP?</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>