force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_RegNum__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_RegNum__c</fullName>
    <label>Registration Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>