force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CD_State_Province_Region__c.field-meta.xml
<CustomField>
    <fullName>MDN_CD_State_Province_Region__c</fullName>
    <label>* State/Province/Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>American Samoa</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>District of Colombia</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Guam</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>Louisiana</fullName>
            </value>
            <value>
                <fullName>Maine</fullName>
            </value>
            <value>
                <fullName>Maryland</fullName>
            </value>
            <value>
                <fullName>Massachusetts</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>Minnesota</fullName>
            </value>
            <value>
                <fullName>Mississippi</fullName>
            </value>
            <value>
                <fullName>Missouri</fullName>
            </value>
            <value>
                <fullName>Montana</fullName>
            </value>
            <value>
                <fullName>Nebraska</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>