force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CMT_AddCom__c.field-meta.xml
<CustomField>
    <fullName>MDN_CMT_AddCom__c</fullName>
    <label>Add Comment</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>