force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CP_Rel_Desc__c.field-meta.xml
<CustomField>
    <fullName>MDN_CP_Rel_Desc__c</fullName>
    <inlineHelpText>MDN Credit Information not required for US: Parent Setups, Guarantors or Vendors Only.</inlineHelpText>
    <label>* Counterparty Relationship Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counterparty</fullName>
            </value>
            <value>
                <fullName>Counterparty (Customer &amp; Vendor)</fullName>
            </value>
            <value>
                <fullName>Customer Only</fullName>
            </value>
            <value>
                <fullName>Vendor Only</fullName>
            </value>
            <value>
                <fullName>Guarantor Only</fullName>
            </value>
            <value>
                <fullName>Parent Setup Only</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>