force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Ant_FirstTrade_Date__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Ant_FirstTrade_Date__c</fullName>
    <label>* Anticipated First Trade Date</label>
    <type>Date</type>
</CustomField>