force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Commodity__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Commodity__c</fullName>
    <label>Commodity  (*SENA and STUSCO)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>