force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Credit_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>* Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>