force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_CredType__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_CredType__c</fullName>
    <label>* Credit Type/Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>Aggregator - Structured</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>BROKER</fullName>
                <isActive>false</isActive>
                <label>BROKER</label>
            </value>
            <value>
                <fullName>Brokers/Clearing Houses</fullName>
            </value>
            <value>
                <fullName>C&amp;I Enduser Physical</fullName>
            </value>
            <value>
                <fullName>Common Accounts - DM Owned</fullName>
            </value>
            <value>
                <fullName>Common Accounts - T&amp;S Owned</fullName>
            </value>
            <value>
                <fullName>Community Choice Aggregation (CCA)</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Generator - Endusers</fullName>
            </value>
            <value>
                <fullName>Generator - Structured</fullName>
            </value>
            <value>
                <fullName>Hedge Funds / Private Equity</fullName>
            </value>
            <value>
                <fullName>MUSH - Hospitals</fullName>
            </value>
            <value>
                <fullName>MUSH - Municipalities</fullName>
            </value>
            <value>
                <fullName>MUSH - Universities/Schools</fullName>
            </value>
            <value>
                <fullName>Non-Lockbox Aggregator</fullName>
            </value>
            <value>
                <fullName>PIPELINE</fullName>
                <isActive>false</isActive>
                <label>PIPELINE</label>
            </value>
            <value>
                <fullName>Pipelines</fullName>
            </value>
            <value>
                <fullName>Prepay</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Producer-Secured No Margin</fullName>
            </value>
            <value>
                <fullName>Producer - Structured</fullName>
            </value>
            <value>
                <fullName>Producer-Unsecured No Margin</fullName>
            </value>
            <value>
                <fullName>Refiner</fullName>
            </value>
            <value>
                <fullName>SEE SO EU</fullName>
            </value>
            <value>
                <fullName>Shell Affiliate</fullName>
            </value>
            <value>
                <fullName>SHELL AFFILIATES</fullName>
                <isActive>false</isActive>
                <label>SHELL AFFILIATES</label>
            </value>
            <value>
                <fullName>Small C&amp;I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>