force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Cur__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Cur__c</fullName>
    <label>Currency  (*SENA and STUSCO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BET_Currency</valueSetName>
    </valueSet>
</CustomField>