force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_EndDate__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_EndDate__c</fullName>
    <label>End Date  (*SENA and STUSCO)</label>
    <type>Date</type>
</CustomField>