force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_IntRelations__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_IntRelations__c</fullName>
    <inlineHelpText>This field is auto-populated from &apos;Rationale for Onboarding this CP?&apos;</inlineHelpText>
    <label>* Purpose &amp; Nature of Intended Relations</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>