force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Lim_req__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Lim_req__c</fullName>
    <label>* Credit Limit required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>