force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_LocationPP__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_LocationPP__c</fullName>
    <label>Location/Pricing Point(*SENA and STUSCO)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>