force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_PhyFin__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_PhyFin__c</fullName>
    <label>* Physical/Financial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>