force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Price__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Price__c</fullName>
    <label>* Price</label>
    <length>60</length>
    <type>Text</type>
</CustomField>