force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_PriceType__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_PriceType__c</fullName>
    <label>* Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>