force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_PurchSale__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_PurchSale__c</fullName>
    <label>* Purchase/Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>