force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_StartDate__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_StartDate__c</fullName>
    <label>* Start Date</label>
    <type>Date</type>
</CustomField>