force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Units__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Units__c</fullName>
    <label>Units (*SENA and STUSCO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBLS</fullName>
            </value>
            <value>
                <fullName>GJ</fullName>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>M3 (Cubic meters)</fullName>
            </value>
            <value>
                <fullName>Metric Ton</fullName>
            </value>
            <value>
                <fullName>MET</fullName>
            </value>
            <value>
                <fullName>Tons</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>MCF</fullName>
            </value>
            <value>
                <fullName>RECS</fullName>
            </value>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>CREDT</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>KB</fullName>
            </value>
            <value>
                <fullName>KT</fullName>
            </value>
            <value>
                <fullName>KW</fullName>
            </value>
            <value>
                <fullName>MMBTU</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>MWH</fullName>
            </value>
            <value>
                <fullName>PCT</fullName>
            </value>
            <value>
                <fullName>Tonnes</fullName>
            </value>
            <value>
                <fullName>USG</fullName>
            </value>
            <value>
                <fullName>WSP</fullName>
            </value>
            <value>
                <fullName>103M3</fullName>
            </value>
            <value>
                <fullName>GJ (gigajoules)</fullName>
            </value>
            <value>
                <fullName>Tonnes (Emissions)</fullName>
            </value>
            <value>
                <fullName>KWH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>