force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_CR_Vol__c.field-meta.xml
<CustomField>
    <fullName>MDN_CR_Vol__c</fullName>
    <label>Volume  (*SENA and STUSCO)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>