force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_EmailAddList__c.field-meta.xml
<CustomField>
    <fullName>MDN_EmailAddList__c</fullName>
    <inlineHelpText>For multiple email address please follow this format abc@shell.com;xyz@shell.com</inlineHelpText>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>